--- a/Navbar.html
+++ b/Navbar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="Navbar.css">
+    <script src="https://kit.fontawesome.com/055b3e1e27.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navbar Section -->
@@ -18,7 +19,10 @@
                     <li><a href="services">Services</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
-            </div>
+                <div class="theme-toggle">
+                    <i class="fa-solid fa-circle-moon"></i>
+                    <i class="fa-solid fa-sun-bright"></i>
+                </div>
         </nav>
 </header>
 
