--- a/CRUD/index.html
+++ b/CRUD/index.html
@@ -26,6 +26,18 @@
     </thead>
     <tbody id="userTable"></tbody>
   </table>
+
+  <!-- Delete Confirmation Modal -->
+<div id="deleteModal" class="modal">
+  <div class="modal-content">
+    <h3>Are you sure want to delete?</h3>
+    <div class="modal-actions">
+      <button id="confirmDelete" class="confirm-btn">Yes, Delete</button>
+      <button id="cancelDelete" class="cancel-btn">Cancel</button>
+    </div>
+  </div>
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
